# rust-game

./: Cargo.toml  README.MD
game_lib/: Cargo.toml
game_lib/src/: lib.rs
game_lib/src/components/: mover.rs
game_lib/src/systems/: camera.rs
src/: lib.rs  main.rs
src/systems/: camera.rs  input.rs
