[package]
name = "game_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "game_lib"
crate-type = ["cdylib", "lib"]
path = "./src/lib.rs"

[dependencies]
console_error_panic_hook = "0.1"
bevy = "0.10.1"
rand = "0.8.5"
wasm-bindgen = "0.2.86"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader'
]
